# giup

./: .gitignore  HEADER  LICENSE  LICENSE_HEADER  Makefile  README.md  giup.py  license-headers.sh  pyproject.toml  requirements.txt  setup.py
giup/: __main__.py  cli.py  command.py  git.py  project.py  util.py
lib/: build_config.py  command.py  git.py  project.py  util.py
